# c-json

./: .gitmodules  AUTHORS  NEWS.md  README.md  meson.build  test.sh
.cherryci/: ci-test
.github/workflows/: ci.yml
src/: c-json-reader.c  c-json.c  c-json.h  json-validate.c  libcjson.sym  meson.build  test-basic.c  test-reader  test-reader.c
